--- a/centos7-terratest/Dockerfile-go1.13.4-tf0.11.4
+++ b/centos7-terratest/Dockerfile-go1.13.4-tf0.11.4
@@ -7,7 +7,7 @@ RUN yum install -y curl
 RUN yum install -y ca-certificates
 RUN yum install -y git
 RUN yum install -y epel-release
-RUN yum install -y jq
+RUN yum install jq -y
 RUN yum install -y python3
 RUN yum install -y python3-pip
 RUN yum install -y gcc
